--- a/CodingYahak/2020-01-05/gif-chat/package.json
+++ b/CodingYahak/2020-01-05/gif-chat/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-session": "^1.15.6",
+        "minimist": "^1.2.5",
         "mongoose": "^5.8.4",
         "morgan": "^1.9.1",
         "multer": "^1.4.2",
