--- a/HTML5-CSS3/ProgressiveWebApp/gotham_imperial_hotel/package.json
+++ b/HTML5-CSS3/ProgressiveWebApp/gotham_imperial_hotel/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "eslint": "^4.18.2",
     "grunt-cli": "^1.2.0",
     "qs": "^6.9.1"
   },
